# lang-performance

go/: go.mod  main.go
k6/: go.k6  go_2.k6  go_3.k6  run.sh  rust.k6  rust3.k6  rust_2.k6  rust_4.k6  rust_5.k6  test.js
postgres/: postgres.sh
rust/: Cargo.toml
rust/src/: main.rs
